# Frob_robot

./: .gitignore  AGENTS.md  Hakaton_Gorod_V2025_1.txt  README.md  lidar_params.yaml  log.txt  test.py  test2.py
graph/: graph.yaml  graph_pro.graph  graph_pro.txt
install/: local_setup.sh  setup.sh
install/frob_bringup/lib/frob_bringup/: keyboard_teleop
install/frob_bringup/share/frob_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/frob_control/lib/frob_control/: joy_control
install/frob_control/share/frob_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/frob_description/share/frob_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/frob_interfaces/share/frob_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/frob_mission/lib/frob_mission/: graph_navigator  motion_executor
install/frob_mission/share/frob_mission/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/frob_navigation/share/frob_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/frob_odometry/lib/frob_odometry/: odometry_publisher
install/frob_odometry/share/frob_odometry/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/frob_perception/lib/frob_perception/: camera_node  perception_node
install/frob_perception/share/frob_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/keyboard_vel_control/share/keyboard_vel_control/: package.bash  (+4 more)
log/: latest_build
src/frob_interfaces/: CMakeLists.txt
src/frob_interfaces/action/: ExecuteMotion.action
src/frob_interfaces/msg/: IntersectionDetection.msg  LineDetection.msg  ObstacleDetection.msg  SignDetection.msg
src/frob_mission/: package.xml  setup.cfg  setup.py
src/frob_mission/config/: gazebo_camera.config  graph.yaml  mission_params.yaml  planning.rviz
src/frob_mission/frob_mission/: graph_navigator.py  graph_visualizer.py  motion_executor.py  set_initial_pose.py  topic_relay.py
src/frob_mission/launch/: mission.launch.py  planning.launch.py  simulation.launch.py
src/frob_mission/worlds/: city_polygon.sdf  city_polygon_tb4.sdf
src/frob_perception/: package.xml  setup.cfg  setup.py
src/frob_perception/config/: perception_params.yaml
src/frob_perception/frob_perception/: camera_node.py  perception_node.py
src/frob_perception/launch/: perception.launch.py
src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
(+183 files in other folders)
