<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frob_mission</name>
  <version>0.0.0</version>
  <description>City navigation mission: graph-based path planning and motion execution</description>
  <maintainer email="sashakulagin2007@gmail.com">Alex Kulagin</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>frob_interfaces</depend>
  <depend>numpy</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
